fix z-index

--- a/ui.apps/src/main/content/jcr_root/apps/venia/components/commerce/productlist/clientlibs/css/productlist.css
+++ b/ui.apps/src/main/content/jcr_root/apps/venia/components/commerce/productlist/clientlibs/css/productlist.css
@@ -16,3 +16,7 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
+
+div.ds-sdk-sort-dropdown {
+  z-index: 9;
+}
